using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimatorParametrContainer
{
    public static readonly int ULTRA_ATTACK_HASH = Animator.StringToHash("Ultra");
    public static readonly int SIMPLE_ATTACK_HASH = Animator.StringToHash("Simple");
    public static readonly int SUPER_ATTACK_HASH = Animator.StringToHash("Super");
    public static readonly int FIRE_HASH = Animator.StringToHash("Fire");
    public static readonly int SPAWN_HASH = Animator.StringToHash("Spawn");
    public static readonly int MIRROR_HASH = Animator.StringToHash("Mirror");
}
